# vsgRecipes

./: CMakeLists.txt  README.md
data/: boxman.glb  part.i3dm
source/gltf/: CMakeLists.txt  gltf.cpp  gltf.h  vsgloadgltf.cpp
